Organising the colours and text alignment for index page and putting in the correct classes in the html and css.

--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -3,21 +3,31 @@
     background-color: black;
 }
 
+.navbar, .static {
+    background-color: #004E89;
+}
+
+
+
 
 /* Text colour */
+
+.navbar, .navbar-light .navbar-brand, p, h2, .footerHeader{
+    color: #EFEFD0;
+}
+
+.navbar-light .navbar-toggler-icon {
+   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(239, 239, 208, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 
 .offer-bar{
     color: white;
 }
 
-p {
-    color: blue;
-}
-
-.footerHeader, .static {
-    color: red;
-}
-
 /* Feature styling */
 
-
+.orangeButton{
+    background-color: #FF6B35;
+    border: 1px solid #EFEFD0;
+    color: #EFEFD0;
+}
